--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "uuid": "^11.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+  "test": "react-scripts test",
+  "eject": "react-scripts eject",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
+},
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -39,6 +41,10 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "web-vitals": "^4.2.4"
+  },
+  "homepage": {
+    "https://praajj.github.io/react_todo"
   }
 }
