--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react_todo",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://praajj.github.io/react_todo",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
@@ -15,13 +16,13 @@
     "uuid": "^11.0.3"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -43,8 +44,5 @@
   "devDependencies": {
     "gh-pages": "^6.2.0",
     "web-vitals": "^4.2.4"
-  },
-  "homepage": {
-    "https://praajj.github.io/react_todo"
   }
 }
